lib/bluez_obex_native_bindings_generated.dart

// ignore_for_file: always_specify_types
// ignore_for_file: camel_case_types
// ignore_for_file: non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
import 'dart:ffi' as ffi;

/// Bindings for `native/include/bluez_obex_native.h`.
///
/// Regenerate bindings with `dart run ffigen --config ffigen.yaml`.
///
class BluezObexNativeBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  BluezObexNativeBindings(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  BluezObexNativeBindings.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  /// ── Client lifecycle ────────────────────────────────────────────────────────
  void bluez_obex_init(ffi.Pointer<ffi.Void> dart_api_dl_data) {
    return _bluez_obex_init(dart_api_dl_data);
  }

  late final _bluez_obex_initPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
        'bluez_obex_init',
      );
  late final _bluez_obex_init = _bluez_obex_initPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Void> bluez_obex_client_create(int events_port) {
    return _bluez_obex_client_create(events_port);
  }

  late final _bluez_obex_client_createPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Void> Function(ffi.Int64)>>(
        'bluez_obex_client_create',
      );
  late final _bluez_obex_client_create = _bluez_obex_client_createPtr
      .asFunction<ffi.Pointer<ffi.Void> Function(int)>();

  void bluez_obex_client_destroy(ffi.Pointer<ffi.Void> handle) {
    return _bluez_obex_client_destroy(handle);
  }

  late final _bluez_obex_client_destroyPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
        'bluez_obex_client_destroy',
      );
  late final _bluez_obex_client_destroy = _bluez_obex_client_destroyPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  /// ── ObjectManager queries ──────────────────────────────────────────────────
  int bluez_obex_get_managed_objects(
    ffi.Pointer<ffi.Void> handle,
    ffi.Pointer<ffi.Uint8> out,
    int capacity,
  ) {
    return _bluez_obex_get_managed_objects(handle, out, capacity);
  }

  late final _bluez_obex_get_managed_objectsPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Void>,
            ffi.Pointer<ffi.Uint8>,
            ffi.Int32,
          )
        >
      >('bluez_obex_get_managed_objects');
  late final _bluez_obex_get_managed_objects =
      _bluez_obex_get_managed_objectsPtr
          .asFunction<
            int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Uint8>, int)
          >();

  /// A very short-lived native function.
  ///
  /// For very short-lived functions, it is fine to call them on the main isolate.
  /// They will block the Dart execution while running the native function, so
  /// only do this for native functions which are guaranteed to be short-lived.
  int sum(int a, int b) {
    return _sum(a, b);
  }

  late final _sumPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int, ffi.Int)>>('sum');
  late final _sum = _sumPtr.asFunction<int Function(int, int)>();

  /// A longer lived native function, which occupies the thread calling it.
  ///
  /// Do not call these kind of native functions in the main isolate. They will
  /// block Dart execution. This will cause dropped frames in Flutter applications.
  /// Instead, call these native functions on a separate isolate.
  int sum_long_running(int a, int b) {
    return _sum_long_running(a, b);
  }

  late final _sum_long_runningPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int, ffi.Int)>>(
        'sum_long_running',
      );
  late final _sum_long_running = _sum_long_runningPtr
      .asFunction<int Function(int, int)>();
}
